fixed message encryption for tx details

--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -966,6 +966,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Καλώς ήλθατε στο burst!",
   "with_burst": "Με burst",
+  "wrong_pin": "Λάθος κωδικό PIN",
   "x_confirmations": "__x__ επιβεβαιώσεις",
   "yes": "Ναι",
   "yesterdays_change": "Αλλαγή χθες",
