--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -966,6 +966,7 @@
   "website_or_text": "Websivu tai teksti",
   "welcome_to_burst": "Tervetuloa BURST:iin!",
   "with_burst": "BURST:n kanssa",
+  "wrong_pin": "Väärä PIN-koodi",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
   "yesterdays_change": "Eilinen muutos",
