--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -966,6 +966,7 @@
   "website_or_text": "Site web ou description",
   "welcome_to_burst": "Bienvenue sur le client Burst!",
   "with_burst": "Avec BURST",
+  "wrong_pin": "Mauvais NIP",
   "x_confirmations": "__x__ confirmations",
   "yes": "Oui",
   "yesterdays_change": "Changement d'hier",
