--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -966,6 +966,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "गलत पिन",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
   "yesterdays_change": "कल का बदलाव",
