--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -966,6 +966,7 @@
   "website_or_text": "Situs web atau teks",
   "welcome_to_burst": "Selamat datang di Burst!",
   "with_burst": "Dengan BURST",
+  "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
   "yesterdays_change": "Perubahan kemarin",
