--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -966,6 +966,7 @@
   "website_or_text": "Sito Web o testo",
   "welcome_to_burst": "Benvenuti a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "PIN errato",
   "x_confirmations": "__x__ conferme",
   "yes": "Sì",
   "yesterdays_change": "Il cambiamento di ieri",
