--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -966,6 +966,7 @@
   "website_or_text": "Svetainė arba tekstas",
   "welcome_to_burst": "Sveiki atvykę į Burst!",
   "with_burst": "Su BURST",
+  "wrong_pin": "Klaidingas PIN kodas",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
   "yesterdays_change": "Vakarinis pokytis",
