--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -966,6 +966,7 @@
   "website_or_text": "Website of Tekst",
   "welcome_to_burst": "Welkom bij Burst!",
   "with_burst": "Met BURST",
+  "wrong_pin": "Verkeerde pincode",
   "x_confirmations": "__x__ bevestigingen",
   "yes": "Ja",
   "yesterdays_change": "Yesterday's Change",
