--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -975,6 +975,7 @@
   "website_or_text": "Strona lub tekst",
   "welcome_to_burst": "Witaj na Burst!",
   "with_burst": "Z BURST",
+  "wrong_pin": "Zły kod PIN",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
   "yesterdays_change": "Wczorajsza zmiana",
