--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -966,6 +966,7 @@
   "website_or_text": "Sitio web ou Texto",
   "welcome_to_burst": "Bem vindo a Burst!",
   "with_burst": "Com BURST",
+  "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
   "yesterdays_change": "Mudança de ontem",
