--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -966,6 +966,7 @@
   "website_or_text": "Pagină Web sau text",
   "welcome_to_burst": "Bine ai venit la burst!",
   "with_burst": "Cu burst",
+  "wrong_pin": "Cod PIN greșit",
   "x_confirmations": "__x__ confirmări",
   "yes": "Da",
   "yesterdays_change": "Schimbarea de ieri",
