--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -966,6 +966,7 @@
   "website_or_text": "Web sitesi veya metin",
   "welcome_to_burst": "burst hoş geldiniz!",
   "with_burst": "burst ile",
+  "wrong_pin": "Yanlış PIN",
   "x_confirmations": "__x__ teyitleri",
   "yes": "Evet",
   "yesterdays_change": "Dünün Değişimi",
