--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -966,6 +966,7 @@
   "website_or_text": "Веб-сайт або текст",
   "welcome_to_burst": "Ласкаво просимо в Burst!",
   "with_burst": "З BURST",
+  "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
   "yesterdays_change": "Вчорашня зміна",
