--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -966,6 +966,7 @@
   "website_or_text": "網站或文本",
   "welcome_to_burst": "歡迎來到 Burst!",
   "with_burst": "與 BURST",
+  "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
   "yesterdays_change": "昨天的变化",
