--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -966,6 +966,7 @@
   "website_or_text": "Уебсайт или текст",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "Грешен ПИН",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
   "yesterdays_change": "Промяна вчера",
