--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -966,6 +966,7 @@
   "website_or_text": "Pàgina Web o Text",
   "welcome_to_burst": "Benvinguts a burst!",
   "with_burst": "Amb burst",
+  "wrong_pin": "PIN incorrecte",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
   "yesterdays_change": "Canvi d’ahir",
