--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -966,6 +966,7 @@
   "website_or_text": "Webová stránka nebo text",
   "welcome_to_burst": "Vítejte v burst!",
   "with_burst": "S burst",
+  "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Ano",
   "yesterdays_change": "Včerejší změna",
