--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -966,6 +966,7 @@
   "website_or_text": "Webseite oder Text",
   "welcome_to_burst": "Willkommen bei Burst!",
   "with_burst": "Mit BURST",
+  "wrong_pin": "Falsche PIN",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
   "yesterdays_change": "Veränderung zu Gestern",
