--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -975,6 +975,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "Wrong PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
   "yesterdays_change": "Yesterday's Change",
