--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -966,6 +966,7 @@
   "website_or_text": "Sitio web o Texto",
   "welcome_to_burst": "¡Bienvenido a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "Pin erróneo",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
   "yesterdays_change": "Cambio de ayer",
