--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -966,6 +966,7 @@
   "website_or_text": "Sitio web ou texto",
   "welcome_to_burst": "Benvido a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "PIN incorrecto",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
   "yesterdays_change": "Cambio de onte",
