--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -966,6 +966,7 @@
   "website_or_text": "Website ili tekst",
   "welcome_to_burst": "Dobrodošli u Burst!",
   "with_burst": "Sa BURST",
+  "wrong_pin": "Pogrešan PIN",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
   "yesterdays_change": "Jučerašnja promjena",
