--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -966,6 +966,7 @@
   "website_or_text": "ウェブサイトまたはテキスト",
   "welcome_to_burst": "Burst へようこそ!",
   "with_burst": "BURSTと",
+  "wrong_pin": "間違ったPIN",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
   "yesterdays_change": "昨日の変更",
