--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -966,6 +966,7 @@
   "website_or_text": "Site ou texto",
   "welcome_to_burst": "Bem vindo a burst!",
   "with_burst": "Com burst",
+  "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
   "yesterdays_change": "Mudança de ontem",
