--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -966,6 +966,7 @@
   "website_or_text": "Веб-сайт или текст",
   "welcome_to_burst": "Добро пожаловать в Burst!",
   "with_burst": "С BURST",
+  "wrong_pin": "Неверный PIN-код",
   "x_confirmations": "__x__ подтверждений",
   "yes": "Да",
   "yesterdays_change": "Вчерашние перемены",
