--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -966,6 +966,7 @@
   "website_or_text": "Website ili tekst",
   "welcome_to_burst": "Dobrodošli u burst!",
   "with_burst": "Sa burst",
+  "wrong_pin": "Pogrešan PIN",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
   "yesterdays_change": "Jučerašnja promena",
