--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -966,6 +966,7 @@
   "website_or_text": "Webstránka alebo text",
   "welcome_to_burst": "Vitajte v Burst!",
   "with_burst": "S BURST",
+  "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ potvrdení",
   "yes": "Áno",
   "yesterdays_change": "Včerajšia zmena",
