--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -966,6 +966,7 @@
   "website_or_text": "Wеб сајт или Текст",
   "welcome_to_burst": "Добродошли у BURST!",
   "with_burst": "Са BURST-ом",
+  "wrong_pin": "Погрешан ПИН",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
   "yesterdays_change": "Јучерашња промена",
