--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -966,6 +966,7 @@
   "website_or_text": "网站或文本",
   "welcome_to_burst": "欢迎来到 Burst!",
   "with_burst": "与 BURST",
+  "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 确认",
   "yes": "是",
   "yesterdays_change": "昨天的变化",
