better mapping and visualization of different attachment types

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "Публичният ключ на тази сметка е вече обявен. Вместо него използвайте ID на сметката.",
   "recipient_unknown": "Сметката на получателя е неизвестна, което означава, че никога не е имала входяща или изходяща сделки. Моля проверете адреса на получателя преди това.",
   "recipient_unknown_pka": "Сметката на получателя е от неизвестен тип, което означава, че никога не е имала входяща или изходяща операция. Можете да увеличите защитата чрез предоставяне публичен ключ на получателя.",
+  "recipients": "Получатели",
   "record": "рекорд",
   "referenced_transaction_full_hash": "Пълен хеш на свързана сделка",
   "referenced_transaction_hash": "Хеш на свързана сделка",
