--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "このアカウントの公開キーは既に発表されています。そのアカウントIDを代わりにお使いください。",
   "recipient_unknown": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを受信・発信したことがないということを意味します。送信する前に受信者のアドレスを再度チェックしてください。",
   "recipient_unknown_pka": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを発信・送信したことがないということを意味します。このリクエストを提出するには、受信者の公開キーも供給しなければなりません。",
+  "recipients": "受信者",
   "record": "記録",
   "referenced_transaction_full_hash": "参照先トランザクションの完全ハッシュ",
   "referenced_transaction_hash": "参照先のトランザクションハッシュ",
