--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "Публичный ключ этого счета уже анонсирован. Вместо этого пожалуйста используйте номер счета.",
   "recipient_unknown": "Счет получателя является неизвестным аккаунтом, что означает, что он никогда не имел входящих или исходящих транзакций. Пожалуйста, проверьте адрес получателя перед отправкой.",
   "recipient_unknown_pka": "Счет получателя неизвестен, это означает, что в нем нет ни входящих, ни исходящих транзакций. Для отправки этого запроса необходимо также указать публичный ключ получателя.",
+  "recipients": "Получатели",
   "record": "запись",
   "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
   "referenced_transaction_hash": "Хэш Связанной Транзакции",
