--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "Јавни кључ овог налога је већ оглашен. Користите ИД налога уместо јавног кључа.",
   "recipient_unknown": "Налог примаоца је непознат налог, што значи да никада није имао долазећу или одлазећу трансакцију. Молимо Вас да проверите још једном адресу примаоца пре него што наставите.",
   "recipient_unknown_pka": "Налог примаоца је непознат налог, што значи да никада није имао долазну или oдлазну трансакцију. Да бисте потврдили ваш избор морате да прецизирате јавни кључ примаоца.",
+  "recipients": "Приматељи",
   "record": "Запис",
   "referenced_transaction_full_hash": "Комплетан Hash Референтне Трансакције",
   "referenced_transaction_hash": "Hash Означене Трансакције",
