--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "Публічний ключ цього рахунку вже анонсовано. Натомість, будь-ласка використайте номер рахунку.",
   "recipient_unknown": "Рахунок одержувача є невідомим аккаунтом, що означає, що він ніколи не мав транзакцій, що входять або витікаючих. Будь ласка, перевірте адресу одержувача перед відправкою.",
   "recipient_unknown_pka": "Рахунок одержувача невідомий, це означає, що в нім немає транзакцій, що ні входять, ні витікаючих. Для відправки цього запиту необхідно також вказати публічний ключ одержувача.",
+  "recipients": "Одержувачі",
   "record": "Запис",
   "referenced_transaction_full_hash": "Повний хэш вказаної транзакції",
   "referenced_transaction_hash": "Хэш Пов'язаної Транзакції",
