--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "Παραλήπτες",
   "record": "Ρεκόρ",
   "referenced_transaction_full_hash": "Πλήρη Hash αναφερόμενης συναλλαγής",
   "referenced_transaction_hash": "Συσχετισμένο Hash της συναλλαγής",
