--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
   "recipient_unknown": "Račun primatelja je nepoznat, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo provjerite još jednom adresu primatelja prije slanja.",
   "recipient_unknown_pka": "Račun primaoca je nepoznat račun, što znači da nikada nije imao dolaznu ili odlaznu transakciju. Račun ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
+  "recipients": "primatelji",
   "record": "Snimiti",
   "referenced_transaction_full_hash": "Referentna transakcija kompletan hash",
   "referenced_transaction_hash": "Hash upućene transakcije",
