--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -737,6 +737,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "L'account del destinatario è un account sconosciuto, significa che non ha mai avuto una transazione in entrata o in uscita. Si prega di ricontrollare l'indirizzo del destinatario prima dell'invio.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
+  "recipients": "destinatari",
   "record": "Disco",
   "referenced_transaction_full_hash": "Hash completo della transazione di riferimento",
   "referenced_transaction_hash": "Hash della transazione indicata",
