layout and translation refinements

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -678,6 +678,7 @@
   "payload_length": "Съдържание дължина",
   "payment": "плащане",
   "payment_with_message": "Плащане и съобщение",
+  "payments": "Плащания",
   "peer": "Партньор",
   "peers": "Партньори",
   "pending": "Чакащи",
