--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -678,6 +678,7 @@
   "payload_length": "Longitud de la Càrrega",
   "payment": "Pagament",
   "payment_with_message": "Pagament amb Missatge",
+  "payments": "Pagaments",
   "peer": "Parell",
   "peers": "Parells",
   "pending": "Pendent",
