--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -678,6 +678,7 @@
   "payload_length": "Nutzdatenlänge",
   "payment": "Zahlung",
   "payment_with_message": "Zahlung mit Nachricht",
+  "payments": "Zahlungen",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Ausstehend",
