--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -687,6 +687,7 @@
   "payload_length": "Payload Length",
   "payment": "Payment",
   "payment_with_message": "Payment With Message",
+  "payments": "Payments",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Pending",
