--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -678,6 +678,7 @@
   "payload_length": "Longitud de la Carga",
   "payment": "Pago",
   "payment_with_message": "Pago Con Mensaje",
+  "payments": "Pagos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendiente",
