--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -678,6 +678,7 @@
   "payload_length": "Hyötykuorman pituus",
   "payment": "maksu",
   "payment_with_message": "Maksu viestin kanssa",
+  "payments": "maksut",
   "peer": "Vertaiskäyttäjä",
   "peers": "Käyttäjät",
   "pending": "Odottava",
