--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -678,6 +678,7 @@
   "payload_length": "Longueur de la charge",
   "payment": "Paiement",
   "payment_with_message": "Paiement avec message",
+  "payments": "Paiements",
   "peer": "Pair",
   "peers": "Pairs",
   "pending": "En attente",
