--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -678,6 +678,7 @@
   "payload_length": "Lonxitude da carga",
   "payment": "Pagamento",
   "payment_with_message": "Pago coa mensaxe",
+  "payments": "Pagamentos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendente",
