--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -678,6 +678,7 @@
   "payload_length": "Payload Length",
   "payment": "भुगतान",
   "payment_with_message": "Payment With Message",
+  "payments": "भुगतान",
   "peer": "Peer",
   "peers": "सहकर्मी",
   "pending": "लंबित",
