--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -678,6 +678,7 @@
   "payload_length": "Payload Length",
   "payment": "Plaćanje",
   "payment_with_message": "Plaćanje uz poruku",
+  "payments": "plaćanja",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Na čekanju",
