--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -678,6 +678,7 @@
   "payload_length": "membayar beban panjang",
   "payment": "Pembayaran",
   "payment_with_message": "Pembayaran dengan pesan",
+  "payments": "Pembayaran",
   "peer": "Sesama",
   "peers": "Sesama",
   "pending": "Tertunda",
