--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -678,6 +678,7 @@
   "payload_length": "Lunghezza del carico",
   "payment": "Pagamento",
   "payment_with_message": "Pagamento con messaggio",
+  "payments": "pagamenti",
   "peer": "Peer",
   "peers": "Peer",
   "pending": "In sospeso",
