--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -678,6 +678,7 @@
   "payload_length": "ペイロードの長さ",
   "payment": "支払い",
   "payment_with_message": "メッセージをつけて購入",
+  "payments": "支払い",
   "peer": "ピア",
   "peers": "ピア",
   "pending": "保留中",
