--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -678,6 +678,7 @@
   "payload_length": "Payload Lenght",
   "payment": "Mokėjimas",
   "payment_with_message": "Mokėjimas su žinute",
+  "payments": "Mokėjimai",
   "peer": "Peer'as",
   "peers": "Peer'ai",
   "pending": "Laukiama",
