--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -678,6 +678,7 @@
   "payload_length": "Lengte van de lading",
   "payment": "Betaling",
   "payment_with_message": "Betaling met bericht",
+  "payments": "betalingen",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "In behandeling",
