--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -678,6 +678,7 @@
   "payload_length": "Capacitatea lungimii",
   "payment": "Plată",
   "payment_with_message": "Plată cu mesaj",
+  "payments": "plăţile",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "În Aşteptare",
