--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -676,8 +676,9 @@
   "payload": "Plaćeni teret",
   "payload_hash": "Težina hasha",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Plaćanje",
   "payment_with_message": "Plaćanje uz poruku",
+  "payments": "Plaćanja",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Na čekanju",
