--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -676,8 +676,9 @@
   "payload": "Zaťaženie",
   "payload_hash": "Hash zaťaženie",
   "payload_length": "Dĺžka zaťaženia",
-  "payment": "",
+  "payment": "platba",
   "payment_with_message": "Platba so správou",
+  "payments": "platby",
   "peer": "Peer",
   "peers": "Peeri",
   "pending": "Čakajúce",
