--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -676,8 +676,9 @@
   "payload": "Плаћени Терет",
   "payload_hash": "Тежина Hash-а",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Плаћање",
   "payment_with_message": "Плаћање са Поруком",
+  "payments": "Плаћања",
   "peer": "Пеер",
   "peers": "Peers",
   "pending": "На чекању",
