--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -676,8 +676,9 @@
   "payload": "Yükü",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Ödeme",
   "payment_with_message": "Mesaj ile ödeme",
+  "payments": "Ödemeler",
   "peer": "Eş",
   "peers": "Peers",
   "pending": "Beklemede",
