--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -676,8 +676,9 @@
   "payload": "Комерцiйне навантаження",
   "payload_hash": "Хэш комерческой навантаження",
   "payload_length": "Довжина комерційного навантаження",
-  "payment": "",
+  "payment": "Оплата",
   "payment_with_message": "Розрахунок з повідомлення",
+  "payments": "Платежі",
   "peer": "Вузол",
   "peers": "Вузли",
   "pending": "Очікуючі",
