--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -676,8 +676,9 @@
   "payload": "載荷",
   "payload_hash": "載荷哈希",
   "payload_length": "載荷長度",
-  "payment": "",
+  "payment": "付款",
   "payment_with_message": "付款附加信息",
+  "payments": "支付",
   "peer": "節點",
   "peers": "節點",
   "pending": "待定",
