--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -678,6 +678,7 @@
   "payload_length": "Payload Length",
   "payment": "Πληρωμή",
   "payment_with_message": "Payment With Message",
+  "payments": "Πληρωμές",
   "peer": "Κόμβος",
   "peers": "Κόμβοι",
   "pending": "Σε αναμονή",
