--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -687,6 +687,7 @@
   "payload_length": "Długość ładunku",
   "payment": "Zapłata",
   "payment_with_message": "Płatność z wiadomością",
+  "payments": "Płatności",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Oczekuje",
