--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -676,8 +676,9 @@
   "payload": "载荷",
   "payload_hash": "载荷哈希",
   "payload_length": "载荷长度",
-  "payment": "",
+  "payment": "付款",
   "payment_with_message": "付款附加信息",
+  "payments": "支付",
   "peer": "节点",
   "peers": "节点",
   "pending": "待定",
